# wearust

./: .gitignore  Cargo.toml  README.md
src/: fetch_location.rs  fetch_weather.rs  lib.rs
